# p4t

./: .clang-format  .gitignore  .neocmakelint.toml  CMakeLists.txt  CMakePresets.json  README.md  iwyu_output.txt
.githooks/: pre-commit
cmake/: downloadP4api.cmake
include/p4t/: branch_set.h  common.h  log.h  p4t.h  thread_pool.h
include/p4t/commands/: change_list.h  changes_result.h  client_result.h  describe_result.h  file_data.h  file_map.h  filelog_result.h  info_result.h  print_result.h  result.h  sizes_result.h  stream_result.h  sync_result.h  test_result.h  users_result.h
include/p4t/utils/: std_helpers.h  time_helpers.h  timer.h
source/: branch_set.cpp  log.cpp  main.cpp  p4t.cpp  thread_pool.cpp
source/commands/: change_list.cpp  changes_result.cpp  client_result.cpp  describe_result.cpp  file_data.cpp  file_map.cpp  filelog_result.cpp  info_result.cpp  print_result.cpp  result.cpp  sizes_result.cpp  stream_result.cpp  sync_result.cpp  test_result.cpp  users_result.cpp
source/utils/: std_helpers.cpp  time_helpers.cpp  timer.cpp
